Make it work again (mostly)